--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -220,6 +220,11 @@
             <div>
         </div>
     </div>
+    <head>
+    ...
+    @RenderSection("Styles", required: false)
+</head>
+
     <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="~/assets/vendors/chart.js/chart.umd.js"></script>
     <script src="~/assets/vendors/datatables.net/jquery.dataTables.js"></script>
@@ -231,7 +236,8 @@
     <script src="~/assets/js/todolist.js"></script>
     <script src="~/assets/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="~/assets/js/dashboard.js"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXB8P9tyMrKz5uSFFWdcI3F4mATlv0L0Q&callback=initMap" async defer></script>
+
 </body>
 </html>
