--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -14,14 +14,18 @@
         <small class="text-muted">Gestion et recherche des régions</small>
     </div>
     <div class="d-flex gap-2">
-        <input type="file" id="csvFileInput" name="données" accept=".csv" style="display:none" />
-        <button type="button" class="btn btn-inverse-success btn-fw" id="btnImportCsv">
-            <i class="mdi mdi-file-import"></i> Import csv
-        </button>
+    <form method="post" enctype="multipart/form-data" asp-page-handler="ImportCsv">
+        <input type="file" id="csvFileInput" name="csvFile" accept=".csv" style="display:none" />
+        <button type="submit" class="btn btn-inverse-success btn-fw" id="btnImportCsv"><i class="mdi mdi-file-import"></i> Import csv</button>
         <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouvelle région</a>
+        @* @if (TempData["Message"] != null)
+        {
+            <div class="alert alert-success">@TempData["Message"]</div>
+        } *@
+    </form>
     </div>
 </div>
-@if (Model.Regions != null && Model.Regions.Any()){
+
 
 <form method="get" class="mb-4">
     <div class="row g-2 align-items-center">
@@ -59,7 +63,7 @@
     <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
     <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
 </div>
-
+@if (Model.Regions != null && Model.Regions.Any()){
 <table class="table table-hover align-middle" >
     <thead class="table-light">
         <tr>
@@ -67,34 +71,32 @@
             <th class="text-start">Nom</th>
             <th class="text-center">Latitude</th>
             <th class="text-center">Longitude</th>
-            @* <th class="text-center">Géométrie</th> *@
+            <th class="text-center">Géométrie</th>
             <th class="text-center">Population</th>
             <th class="text-center">État</th>
             <th class="text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
-        
-            @foreach (var item in Model.Regions)
-            {
-                <tr>
-                    <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idRegion"/></td>
-                    <td class="text-start"style="word-wrap: break-word; width: 250px;  white-space: normal;" >@item.intitule</td>
-                    <td class="text-center">@item.latitude</td>
-                    <td class="text-center">@item.longitude</td>
-                    @* <td class="text-center" style="word-wrap: break-word; width: 5px;  white-space: normal;">@(item.geometrie != null ? $"({item.geometrie.X}, {item.geometrie.Y})" : "")</td> *@
-                    <td class="text-center">@item.totalPopulationRegion</td>
-                    <td class="text-center">@item.etat</td>
-                    <td>
-                    <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idRegion" data-name="@item.intitule" data-lat="@item.latitude" data-lng="@item.longitude" data-pop="@item.totalPopulationRegion" data-etat="@item.etat"><i class="mdi mdi-pen"></i></button>
-                    <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
-                    <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal"data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
-                    @* <a asp-page="./Edit" asp-route-id="@item.idRegion"></a> *@
-                    @* <a asp-page="./Details" asp-route-id="@item.idRegion"></a> *@
-                    </td>
-                </tr>
-            }
-       
+        @foreach (var item in Model.Regions)
+        {
+            <tr>
+                <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idRegion"/></td>
+                <td class="text-start"style="word-wrap: break-word; width: 250px;  white-space: normal;" >@item.intitule</td>
+                <td class="text-center">@item.latitude</td>
+                <td class="text-center">@item.longitude</td>
+                <td class="text-center" style="word-wrap: break-word; width: 5px;  white-space: normal;">@(item.geometrie != null ? $"({item.geometrie.X}, {item.geometrie.Y})" : "")</td>
+                <td class="text-center">@item.totalPopulationRegion</td>
+                <td class="text-center">@item.etat</td>
+                <td>
+                <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idRegion" data-name="@item.intitule" data-lat="@item.latitude" data-lng="@item.longitude" data-pop="@item.totalPopulationRegion" data-etat="@item.etat"><i class="mdi mdi-pen"></i></button>
+                <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
+                <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal"data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
+                @* <a asp-page="./Edit" asp-route-id="@item.idRegion"></a> *@
+                @* <a asp-page="./Details" asp-route-id="@item.idRegion"></a> *@
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
@@ -224,7 +226,6 @@
     </form>
   </div>
 </div>
-
 
 @section Scripts {
     <script src="~/assets/js/personal/region.js"></script>
