--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -102,15 +102,14 @@
 
 <nav aria-label="Page navigation example" class="mt-3">
     <ul class="pagination justify-content-end">
-        <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Précédent</a>
-        </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#">Suivant</a>
-        </li>
+        @if (Model.Regions.HasPreviousPage)
+        {
+        <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)">Précédent</a></li>
+        }
+        @if (Model.Regions.HasNextPage)
+        {
+        <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)">Suivant</a></li>
+        }
     </ul>
 </nav>
 
