--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -26,44 +26,46 @@
     </div>
 </div>
 
-
 <form method="get" class="mb-4">
-    <div class="row g-2 align-items-center">
-        <div class="col-md-2">
-            <input type="text" class="form-control form-control-sm" placeholder="Nom">
-        </div>
-        <div class="col-md-2">
-            <input type="number" class="form-control form-control-sm" placeholder="Latitude">
-        </div>
-        <div class="col-md-2">
-            <input type="number" class="form-control form-control-sm"placeholder="Longitude">
-        </div>
-        <div class="col-md-2">
-            <input type="number" class="form-control form-control-sm" placeholder="Min pop.">
-        </div>
-        <div class="col-md-2">
-            <input type="number" class="form-control form-control-sm" placeholder="Max pop.">
-        </div>
-        <div class="col-md-2">
-            <select class="form-select form-select-sm">
-                <option value="">État</option>
-                <option value="1">Actif</option>
-                <option value="0">Inactif</option>
-            </select>
-        </div>
-        <div class="col-md-2 d-flex align-items-end">
-            <button type="submit" class="btn btn-inverse-secondary btn-fw w-100">
-                <i class="icon-search"></i>
-            </button>
-        </div>
+  <div class="row g-2 align-items-center">
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" placeholder="Nom" name="SearchIntitule" value="@Model.SearchIntitule">
     </div>
+    <div class="col-md-2">
+      <input type="number" step="any" class="form-control form-control-sm" placeholder="Latitude" name="Latitude" value="@(Model.Latitude)">
+    </div>
+    <div class="col-md-2">
+      <input type="number" step="any" class="form-control form-control-sm" placeholder="Longitude" name="Longitude" value="@(Model.Longitude)">
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" placeholder="Min pop." name="MinPopulation" value="@(Model.MinPopulation)">
+    </div>
+    <div class="col-md-2">
+      <input type="number" class="form-control form-control-sm" placeholder="Max pop." name="MaxPopulation" value="@(Model.MaxPopulation)">
+    </div>
+    <div class="col-md-2">
+      <select class="form-select form-select-sm" name="Etat">
+        <option value="">État</option>
+        <option value="0" selected="@(Model.Etat == 0)">Non validé</option>
+        <option value="5" selected="@(Model.Etat == 5)">Validé</option>
+      </select>
+    </div>
+    <div class="col-md-2 d-flex align-items-end">
+      <button type="submit" class="btn btn-inverse-secondary btn-fw w-100">
+        <i class="icon-search"></i>
+      </button>
+    </div>
+  </div>
 </form>
+
 <hr />
+@if (Model.Regions != null && Model.Regions.Any()){
 <div class="d-flex justify-content-end mb-2 gap-2">
     <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
     <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
 </div>
-@if (Model.Regions != null && Model.Regions.Any()){
+
+
 <table class="table table-hover align-middle" >
     <thead class="table-light">
         <tr>
@@ -103,12 +105,17 @@
 <nav aria-label="Page navigation example" class="mt-3">
     <ul class="pagination justify-content-end">
         @if (Model.Regions.HasPreviousPage)
-        {
-        <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)">Précédent</a></li>
-        }
-        @if (Model.Regions.HasNextPage)
-        {
-        <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)">Suivant</a></li>
+    {
+         <li class="page-item">
+            <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)">Précédent</a>
+        </li>
+            }
+
+         @if (Model.Regions.HasNextPage)
+    {
+        <li class="page-item">
+            <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)">Suivant</a>
+        </li>
         }
     </ul>
 </nav>
