feat: implement Municipality CRUD (with pagination + advanced search) - fix: fixing District js

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
                     <div class="collapse" id="ui-basic">
                         <ul class="nav flex-column sub-menu">
                         <li class="nav-item"> <a class="nav-link" href="/Regions">Régions</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="/District">District</a></li>
+                        <li class="nav-item"> <a class="nav-link" href="/Districts">District</a></li>
                         <li class="nav-item"> <a class="nav-link" href="/Communes">Communes</a></li>
                         </ul>
                     </div>
