--- a/Pages/Communes/Index.cshtml
+++ b/Pages/Communes/Index.cshtml
@@ -1,26 +1,23 @@
 @page
-@model Avaratra.BackOffice.Pages_Districts.IndexModel
+@model Avaratra.BackOffice.Pages_Communes.IndexModel
 
 @{
-    ViewData["Title"] = "Districts";
+    ViewData["Title"] = "Communes";
 }
 @section Styles {
     <link rel="stylesheet" href="~/css/personal_style/Index.css" />
 }
+
 <div class="d-flex justify-content-between align-items-center mb-3">
     <div>
-        <h3 class="mb-1">Districts</h3>
-        <small class="text-muted">Gestion et recherche des districts</small>
+        <h3 class="mb-1">Communes</h3>
+        <small class="text-muted">Gestion et recherche des communes</small>
     </div>
     <div class="d-flex gap-2">
     <form method="post" enctype="multipart/form-data" asp-page-handler="ImportCsv">
         <input type="file" id="csvFileInput" name="csvFile" accept=".csv" style="display:none" />
         <button type="submit" class="btn btn-inverse-success btn-fw" id="btnImportCsv"><i class="mdi mdi-file-import"></i> Import csv</button>
-        <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouveau district</a>
-        @* @if (TempData["Message"] != null)
-        {
-            <div class="alert alert-success">@TempData["Message"]</div>
-        } *@
+        <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouvelle commune</a>
     </form>
     </div>
 </div>
@@ -28,10 +25,13 @@
 <form method="get" class="mb-4">
   <div class="row g-2 align-items-center">
     <div class="col-md-2">
-      <input type="text" class="form-control form-control-sm" placeholder="District" name="SearchIntitule" >
+      <input type="text" class="form-control form-control-sm" placeholder="Région" name="SearchRegion" >
     </div>
     <div class="col-md-2">
-      <input type="text" class="form-control form-control-sm" placeholder="Région" name="SearchRegion" >
+      <input type="text" class="form-control form-control-sm" placeholder="District" name="SearchDistrict" >
+    </div>
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" placeholder="Communes" name="SearchIntitule" >
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" placeholder="Min pop." name="MinPopulation">
@@ -54,7 +54,8 @@
   </div>
 </form>
 <hr />
-@if (Model.Districts != null && Model.Districts.Any()){
+
+@if (Model.Communes != null && Model.Communes.Any()){
 <div class="d-flex justify-content-end mb-2 gap-2">
     <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
     <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
@@ -64,26 +65,28 @@
     <thead class="table-light">
         <tr>
             <th scope="col" class="text-center"> <input type="checkbox" id="selectAll"></th>
-            <th class="text-start">District</th>
             <th class="text-center">Région</th>
-            <th class="text-center">Total population</th>
+            <th class="text-start">District</th>
+            <th class="text-center">Commune</th>
+            <th class="text-center">Nombre de population</th>
             <th class="text-center">Etat</th>
             <th class="text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Districts)
+        @foreach (var item in Model.Communes)
         {
             <tr>
-                <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idDistrict"/></td>
+                <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idCommune"/></td>
+                <td class="text-center">@item.District.Region.intitule </td>
+                <td class="text-center">@item.District.intitule </td>
                 <td class="text-start"style="word-wrap: break-word; width: 250px;  white-space: normal;" >@item.intitule</td>
-                <td class="text-center">@item.Region.intitule </td>
-                <td class="text-center">@item.totalPopulationDistrict</td>
+                <td class="text-center">@item.nombrePopulation</td>
                 <td class="text-center">@item.etat</td>
                 <td>
-                <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idDistrict" data-name="@item.intitule" data-pop="@item.totalPopulationDistrict" data-regionid="@item.IdRegion"><i class="mdi mdi-pen"></i></button>
-                <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idDistrict" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
-                <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal"data-id="@item.idDistrict" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
+                <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idCommune" data-name="@item.intitule" data-pop="@item.nombrePopulation" data-discrict-id="@item.IdDistrict"><i class="mdi mdi-pen"></i></button>
+                <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idCommune" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
+                <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal" data-id="@item.idCommune" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
                 </td>
             </tr>
         }
@@ -92,22 +95,21 @@
 
 <nav aria-label="Page navigation example" class="mt-3">
     <ul class="pagination justify-content-end">
-        @if (Model.Districts.HasPreviousPage)
+        @if (Model.Communes.HasPreviousPage)
         {
-            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Districts.PageIndex - 1)">Précédent</a></li>
+            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Communes.PageIndex - 1)">Précédent</a></li>
         }
-        @if (Model.Districts.HasNextPage)
+        @if (Model.Communes.HasNextPage)
         {
-            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Districts.PageIndex + 1)">Suivant</a></li>
+            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.Communes.PageIndex + 1)">Suivant</a></li>
         }
     </ul>
 </nav>
-
 }else { 
     <p class="text-center text-muted fw-bold mt-3">
     <i class="mdi mdi-alert-circle-outline"></i> Aucun district trouvé</p>
      }
-
+    
 <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -118,14 +120,14 @@
       </div>
       <div class="modal-body">
         <div class="mb-2">
-            <input type="text" class="form-control form-control-sm" id="regionName" placeholder="District" asp-for="District.intitule">
+            <input type="text" class="form-control form-control-sm" id="regionName" placeholder="Commune" asp-for="Commune.intitule">
         </div>
         <div class="form-group">
-            <label for="exampleSelectGender">Region</label> 
-            <select class="form-select" id="exampleSelectGender" asp-for="District.IdRegion">
-                @foreach (var item in Model.RegionsValidees)
+            <label for="exampleSelectGender">District</label> 
+            <select class="form-select" id="exampleSelectGender" asp-for="Commune.IdDistrict">
+                @foreach (var item in Model.DistrictsValides)
                 {
-                    <option value="@item.idRegion">@item.intitule</option>
+                    <option value="@item.idDistrict">@item.intitule</option>
                 }
             </select>
         </div>
@@ -133,13 +135,13 @@
             <button type="button" id="btnGetLocation" class="btn btn-inverse-primary btn-fw form-control" > <i class="mdi mdi-crosshairs-gps"> Obtenir ma position</i></button>
         </div>
         <div class="mb-2">
-            <input type="number" id="District_latitude"  class="form-control form-control-sm" step="any" asp-for="District.latitude" placeholder="Latitude">
+            <input type="number" id="Commune_latitude"  class="form-control form-control-sm" step="any" asp-for="Commune.latitude" placeholder="Latitude">
         </div>
         <div class="mb-2">
-            <input type="number" id="District_longitude" class="form-control form-control-sm" step="any" asp-for="District.longitude"  placeholder="Longitude">
+            <input type="number" id="Commune_longitude" class="form-control form-control-sm" step="any" asp-for="Commune.longitude"  placeholder="Longitude">
         </div>
         <div class="mb-2">
-            <input type="number"  class="form-control form-control-sm" step="any"  placeholder="Nombre de population" asp-for="District.totalPopulationDistrict">
+            <input type="number"  class="form-control form-control-sm" step="any"  placeholder="Nombre de population" asp-for="Commune.nombrePopulation">
         </div>
       </div>
       <div class="modal-footer p-2">
@@ -157,27 +159,27 @@
     <form method="post" asp-page="Index" asp-page-handler="Update">
         <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="editModalLabel">Modifier le district</h5>
+            <h5 class="modal-title" id="editModalLabel">Modifier la commune</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
         </div>
         <div class="modal-body">
-            <input type="hidden" id="districtId" asp-for="District.idDistrict"/>
+            <input type="hidden" id="communeId" asp-for="Commune.idCommune"/>
             <div class="mb-2">
-                <label for="exampleSelectGender">District</label> 
-                <input type="text" class="form-control form-control-sm" id="districtName" asp-for="District.intitule" placeholder="Nom">
+                <label for="exampleSelectGender">Commune</label> 
+                <input type="text" class="form-control form-control-sm" id="communeName" asp-for="Commune.intitule" placeholder="Nom">
             </div>
             <div class="form-group">
-                <label for="exampleSelectGender">Region</label> 
-                <select class="form-select" id="regionList" asp-for="District.IdRegion">
-                    @foreach (var item in Model.RegionsValidees)
+                <label for="exampleSelectGender">District</label> 
+                <select class="form-select" id="districtList" asp-for="Commune.IdDistrict">
+                    @foreach (var item in Model.DistrictsValides)
                     {
-                        if (Model.District != null && item.idRegion == Model.District.IdRegion)
+                        if (Model.Commune != null && item.idDistrict == Model.Commune.IdDistrict)
                         {
-                            <option value="@item.idRegion" selected>@item.intitule</option>
+                            <option value="@item.idDistrict" selected>@item.intitule</option>
                         }
                         else
                         {
-                            <option value="@item.idRegion">@item.intitule</option>
+                            <option value="@item.idDistrict">@item.intitule</option>
                         }
                     }
 
@@ -185,7 +187,7 @@
             </div>
             <div class="mb-2">
                 <label for="exampleSelectGender">Nombre de population</label> 
-                <input type="number" class="form-control form-control-sm" id="districtPop" asp-for="District.totalPopulationDistrict" step="any" placeholder="Nombre de population">
+                <input type="number" class="form-control form-control-sm" id="communePop" asp-for="Commune.nombrePopulation" step="any" placeholder="Nombre de population">
             </div>
         </div>
         <div class="modal-footer p-2">
@@ -206,8 +208,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
       </div>
       <div class="modal-body">
-        <input type="hidden" id="districtId" name="id" />
-        <p>Voulez-vous vraiment supprimer le district "<strong id="districtName "></strong>" de la liste?</p>
+        <input type="hidden" id="communeId" name="id" />
+        <p>Voulez-vous vraiment supprimer la commune "<strong id="communeName"></strong>" de la liste?</p>
       </div>
       <div class="modal-footer p-2">
         <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
@@ -227,8 +229,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
       </div>
       <div class="modal-body">
-        <input type="hidden" id="districtId" name="id" />
-        <p>Voulez-vous vraiment valider la commune "<strong id="districtName    "></strong>" ?</p>
+        <input type="hidden" id="communeId" name="id" />
+        <p>Voulez-vous vraiment valider la commune "<strong id="communeName"></strong>" ?</p>
       </div>
       <div class="modal-footer p-2">
         <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
@@ -240,7 +242,7 @@
 </div>
 
 @section Scripts {
-    <script src="~/assets/js/personal/district.js"></script>
+    <script src="~/assets/js/personal/commune.js"></script>
     <script>
         $(document).ready(function () {
             var showModal = '@ViewData["ShowCreateModal"]';
