fix: implement transaction validation Municipality and District

--- a/Pages/Districts/Index.cshtml
+++ b/Pages/Districts/Index.cshtml
@@ -228,7 +228,7 @@
       </div>
       <div class="modal-body">
         <input type="hidden" id="districtId" name="id" />
-        <p>Voulez-vous vraiment valider la commune "<strong id="districtName    "></strong>" ?</p>
+        <p>Voulez-vous vraiment valider le district "<strong id="districtName"></strong>" ?</p>
       </div>
       <div class="modal-footer p-2">
         <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
