--- a/Pages/Districts/Index.cshtml
+++ b/Pages/Districts/Index.cshtml
@@ -13,7 +13,7 @@
         <small class="text-muted">Gestion et recherche des districts</small>
     </div>
     <div class="d-flex gap-2">
-    <form method="post" enctype="multipart/form-data" asp-page-handler="ImportCsv">
+    <form method="post" asp-page="Index" enctype="multipart/form-data" asp-page-handler="ImportCsv" >
         <input type="file" id="csvFileInput" name="csvFile" accept=".csv" style="display:none" />
         <button type="submit" class="btn btn-inverse-success btn-fw" id="btnImportCsv"><i class="mdi mdi-file-import"></i> Import csv</button>
         <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouveau district</a>
