--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -117,6 +117,11 @@
 /* === Import template variables === */
 /*-------------------------------------------------------------------*/
 /* === SCSS Compass Functions === */
+body.login-page {
+    background: url('@ViewData["BackgroundImage"]') no-repeat center center fixed !important;
+    background-size: cover;
+}
+
 @-moz-keyframes flash {
   0% {
     opacity: 1;
