--- a/Pages/Utilisateurs/Index.cshtml
+++ b/Pages/Utilisateurs/Index.cshtml
@@ -5,15 +5,17 @@
     ViewData["Title"] = "Index";
     Layout = ViewData["Layout"]?.ToString();
 }
-
 <style>
     body {
         background-image: url('@ViewData["BackgroundImage"]');
     }
 </style>
 <div class="container-fluid page-body-wrapper full-page-wrapper">
-    <div    class="content-wrapper d-flex align-items-center auth px-0"  >
+    <div class="content-wrapper d-flex align-items-center auth px-0"  >
         <div class="row w-100 mx-0">
+        <div class="login-header">
+            <h1 class="animated-text">Bienvenue sur notre plateforme</h1>
+        </div>
         <div class="col-lg-4 mx-auto" >
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
             <div class="brand-logo" style="text-align:center">
@@ -23,13 +25,13 @@
             <h6 class="font-weight-light">Veuillez vous connecter pour continuer.</h6>
             <form class="pt-3">
                 <div class="form-group">
-                <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Adresse email">
+                <input type="email" class="form-control form-control-sm"  placeholder="Adresse email" value="angotyrabarijaona@gmail.com">
                 </div>
                 <div class="form-group">
-                <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Mot de passe">
+                <input type="password" class="form-control form-control-sm" placeholder="Mot de passe" value="motDepasse1">
                 </div>
                 <div class="mt-3 d-grid gap-2">
-                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="/">Se connecter</a>
+                <a class="btn btn-block btn-primary btn-sm font-weight-medium auth-form-btn" href="/">Se connecter</a>
                 </div>
                 <div class="text-center mt-4 font-weight-light"> Vous n'avez pas encore de compte?
                 <a href="register.html" class="text-primary">Créer</a>
