--- a/Pages/Utilisateurs/Index.cshtml
+++ b/Pages/Utilisateurs/Index.cshtml
@@ -23,19 +23,23 @@
                 @* <img src="/assets/images/background.png" style="width:200px;" /> *@
             </div>
             <h6 class="font-weight-light">Veuillez vous connecter pour continuer.</h6>
-            <form class="pt-3">
+            <form method="post" class="pt-3">
                 <div class="form-group">
-                <input type="email" class="form-control form-control-sm"  placeholder="Adresse email" value="angotyrabarijaona@gmail.com">
+                    <input type="email" class="form-control form-control-sm"  placeholder="Adresse email" asp-for="Email">
+                    <p style="text-align:center"><span asp-validation-for="Email" class="text-danger"></span></p>
                 </div>
                 <div class="form-group">
-                <input type="password" class="form-control form-control-sm" placeholder="Mot de passe" value="motDepasse1">
+                    <input type="password" class="form-control form-control-sm" placeholder="Mot de passe" asp-for="MotDePasse">
+                    <p style="text-align:center"><span asp-validation-for="MotDePasse" class="text-danger"></span></p>
                 </div>
-                <div class="mt-3 d-grid gap-2">
-                <a class="btn btn-block btn-primary btn-sm font-weight-medium auth-form-btn" href="/">Se connecter</a>
-                </div>
-                <div class="text-center mt-4 font-weight-light"> Vous n'avez pas encore de compte?
-                <a href="register.html" class="text-primary">Créer</a>
-                </div>
+                <div class="mt-3 d-grid gap-2"><button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"> Se connecter </button></div>
+                <div class="text-center mt-4 font-weight-light"> Vous n'avez pas encore de compte?<a href="register.html" class="text-primary">Créer</a></div>
+                @if (TempData["ErrorMessage"] != null)
+                {
+                    <div class="alert alert-danger d-flex align-items-center" role="alert" style="border-radius:8px; font-weight:500;"> 
+                    <i class="bi bi-exclamation-triangle-fill me-2"></i> @TempData["ErrorMessage"] </div>
+                }
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             </form>
             </div>
         </div>
@@ -45,6 +49,7 @@
 @section Styles {
     <link rel="stylesheet" href="~/assets/css/personal_style/login.css" />
 }
+@section Scripts { <partial name="_ValidationScriptsPartial" /> }
 
 
 
