--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -99,19 +99,13 @@
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                 <a class="dropdown-item">
                     <i class="ti-settings text-primary"></i> Settings </a>
-                <a class="dropdown-item">
-                    <i class="ti-power-off text-primary"></i> Logout </a>
+                <a class="dropdown-item" asp-page="/Utilisateurs/Index" asp-page-handler="Logout">
+                <i class="ti-power-off text-primary"></i> Logout </a>
                 </div>
             </li>
-            <li class="nav-item nav-settings d-none d-lg-flex">
-                <a class="nav-link" href="#">
-                <i class="icon-ellipsis"></i>
-                </a>
-            </li>
+            <li class="nav-item nav-settings d-none d-lg-flex"><a class="nav-link" href="#"><i class="icon-ellipsis"></i></a></li>
             </ul>
-            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="icon-menu"></span>
-            </button>
+            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas"><span class="icon-menu"></span></button>
             </div>
         </nav>
       <!-- partial -->
